--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
 	background: -moz-radial-gradient(center top , circle closest-corner, #ff9804, #e28704) repeat scroll 0 0 transparent;
 }
 
-h1 {
+header h1, header h2 {
 	-webkit-transform: matrix(1, -0.23, 0, 1, 0pt, 0pt);
 	-moz-transform: matrix(1, -0.23, 0, 1, 0pt, 0pt);
 	-o-transform: matrix(1, -0.23, 0, 1, 0pt, 0pt);
@@ -128,13 +128,23 @@ h1 {
 	text-shadow: 4px 5px 3px #d4d4d4;
 }
 
-#boilerplates{
+header h2 {
+	color: #2a2a2a;
+	font-size: 30px;
+	letter-spacing: 3px;
+	line-height: 1em;
+}
+
+#container{
 	width: 780px;
 	margin: 30px auto;
+}
+
+#boilerplates{
 	list-style: none;
 }
 
-li{
+#boilerplates li{
 	background: #b46a00;
 	border: 1px solid #2a282a;
 	color: #2e2e2e;
@@ -149,7 +159,7 @@ li{
 	margin-bottom: 20px;
 }
 
-li:hover{
+#boilerplates li:hover{
 	-webkit-box-shadow: inset  0 0 5px #888;
 	-moz-box-shadow: inset  0 0 5px #000;
 	box-shadow: inset 0 0 5px #2e2e2e;
@@ -180,4 +190,20 @@ li:hover{
 	.source:hover{
 		text-decoration: underline;
 	}
-		
+	
+.innerContainer{
+	width: 92%;
+	margin: auto;
+}
+
+#info, .download{
+	display: inline-block;
+	vertical-align: middle;
+	font-family: Helvetica, sans-serif;	
+}
+	#info ol{
+		list-style: none;
+	}
+	
+	pre { background: #000; color: #fff; padding: 15px;}
+ .footer { text-align:center; padding-top:30px; font-style: italic; }
